--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
             <button type="button" class="btn btn-warning">
-                <a href="/food">
+                <a href="/together">
                     <div class="btt3"><span style="color:black">함께하기</span></div>
                 </a>
             </button>
